--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -661,3 +661,23 @@ html, body {
   display: block;
   margin: 10px auto;
 }
+
+/*
+See Slate Issue 855 for a suggestions about how to get code blocks in the center column rather than always in the right column.
+https://github.com/slatedocs/slate/issues/855#issuecomment-337706179
+
+
+*/
+.content {
+  .center-column + pre {
+    position: static;
+    float: none;
+    clear: none;
+    margin: 0 28px;
+    left: 0;
+    margin-right: $examples-width !important;
+    width: 45% !important;     // May need to adjust this
+
+  }
+}
+
