Update webmap tutorial HTML/JS content.
Update the webmap quickstart tutorial to remove the step with the Draw
plugin and reshape how the "finalized" files are being represented
(split JS into separate file that evolves over time).

--- a/source/includes/tutorial/webdev_mapbox_quickstart/html_evolution/0_hello_world/index.html
+++ b/source/includes/tutorial/webdev_mapbox_quickstart/html_evolution/0_hello_world/index.html
@@ -52,31 +52,6 @@ Hello (part of the) World
 
   </div>
 
-  <!-- JS embedded in body tag  -->
-  <script>
-    // TO MAKE THE MAP APPEAR YOU MUST
-    // ADD YOUR ACCESS TOKEN FROM
-    // https://account.mapbox.com
-    mapboxgl.accessToken = 'YOUR KEY HERE -- PROBABLY STARTS WITH pk.****';
-
-
-    // initiate a new map by passing an object describing a config
-    // for more info see: https://docs.mapbox.com/mapbox-gl-js/api/map/
-    var map = new mapboxgl.Map({
-        // id of div that will hold map
-        container: 'map',
-
-        // one of the existing mapbox map styles
-        style: 'mapbox://styles/mapbox/light-v10',
-
-        // zoom in (greater = smaller area displayed)
-        zoom: 4,
-
-        // longitude, latitude of the map center
-        center: [20, 0]
-    });
-
-  </script>
-
+  <script src="tutorial-index.js"></script>
 </body>
 </html>
