--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -422,6 +422,14 @@ html, body {
     margin-bottom: 0.8em;
   }
 
+  h3 {
+    font-size: 18px;
+  }
+
+  h4 {
+    font-size: 14px;
+  }
+
   h5, h6 {
     font-size: 10px;
   }
