Add class to allow forcing of code wrapping in tables

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -464,6 +464,12 @@ html, body {
       code {
         white-space: nowrap;
       }
+      /* Allow forcing code to wrap in tables */
+      .code-wrap {
+        code {
+          white-space: normal;
+        }
+      }
     }
 
     th {
