--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -76,21 +76,11 @@ under the License.
         </div>
       <% end %>
       <ul class="toc-list-h1">
-        <li>
-          <a href="index.html" class="toc-h1 toc-link" data-title="Home">Home</a>
-        </li>
-        <li>
-          <a href="quickstart.html" class="toc-h1 toc-link" data-title="Quickstart">Quickstart</a>
-        </li>
-        <li>
-          <a href="concepts.html" class="toc-h1 toc-link" data-title="Concepts">Concepts</a>
-        </li>
-        <li>
-          <a href="reference.html" class="toc-h1 toc-link" data-title="Reference">Reference</a>
-        </li>
-        <li>
-          <a href="tutorials.html" class="toc-h1 toc-link" data-title="Tutorials">Tutorials</a>
-        </li>
+        <% static_links().each do |link| %>
+          <li>
+            <a href="<%= link[:href] %>" class="toc-h1 toc-link" data-title="<%= link[:title] %>"><%= link[:title] %></a>
+          </li>
+        <% end %>
       </ul>
       <% if current_page.data.search %>
         <div class="search">
